fix: fixed buttons location on mobiles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,7 @@ body {
     flex-basis: 740px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     min-height: 80vh;
     max-width: 740px;
     background-color: $white-bg;
@@ -44,9 +45,10 @@ body {
     padding: 2rem;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .03), 0 2px 20px 10px rgba(0, 0, 0, .02);
     border-radius: 8px;
-    @media(max-width: 750px) {
+    @media(max-width: $mobile) {
         flex-basis: 100%;
         max-width: 100vw;
+        padding: 1rem;
     }
     &__button {
         background: $white;
@@ -57,7 +59,6 @@ body {
         display: inline;
         justify-content: center;
         align-items: center;
-        margin-right: 16px;
         border-radius: 50px;
         padding: 8px 32px;
         cursor: pointer;
